--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+    <% if user_signed_in? %>
+    <%= link_to "logout", destroy_user_session_path, method: "DELETE"%>
+    <% end %>
     <%= yield %>
   </body>
 </html>
